Updating typescript to match new transaction
